2007-01-24  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/commands.py
	(_parse_typed_args._do_parse_typed_args): Parse dicts and bools.
	For example, {(sb)(is)} foo true 3 bar => {'foo': True, 3=>'bar'}.

	* flumotion/admin/gtk/client.py (Window.setPlanetState): Accept
	the first flow instead of rejecting any flow not named 'default'.

2007-01-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  ignore already handled setup errors
	* flumotion/component/feedcomponent.py:
	  raise a handled error when we fail to parse a pipeline
	* flumotion/launch/main.py:
	  make sure we show messages
	  exit on handled setup errors

2007-01-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* doc/man/flumotion-worker.1:
	Fix man page, fixes #546.

2007-01-23  Andy Wingo  <wingo@pobox.com>

	* doc/redhat/flumotion: Lockfiles are only used if they have the
	same name as the init script, so set flumotion.lock iff a call to
	the init script succeeded and flumotion processes are running.
	(start, stop): Parse type and name more robustly, fixes names like
	foo@bar. Change so that a call to "flumotion stop worker foo"
	always tries to stop the worker; the logic of which workers to
	stop is now to check the PID files in $rundir.

2007-01-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/worker.py:
	Appease pychecker and make comment.

2007-01-23  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/component.py: 
	Trap ComponentSetupHandledError after component setup.
	Fixes #548
	* flumotion/common/worker.py: 
	On special cases, the PID is None when processEnded is called,
	it failed trying to log it. Changed the ProcessProtocol
	to handle this case properly.

2007-01-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	  add docstring
	* flumotion/configure/configure.py:
	  privatize and remove type from variable name
